# WuBuPad

./: .gitignore  AGI_PROTOCOL.md  CMakeLists.txt  GAPS_GUI.md  GAPS_NOTEPAD.md  GAPS_OFFICE.md  README.md
apps/wubupad/: main.c
src/: agent.c  agent.h  buffer.c  buffer.h  diff.c  diff.h  doc.c  doc.h  docs.c  docs.h  encode.c  encode.h  json.c  json.h  lex.c  lex.h  search.c  search.h
tests/: test_agent.c  test_core.c
